--- a/tsconfig-backup.app.json
+++ b/tsconfig-backup.app.json
@@ -9,12 +9,14 @@
     ],
     "module": "ESNext",
     "skipLibCheck": true,
+    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -23,11 +25,19 @@
     "paths": {
       "@my-components/*": [
         "./src/*"
+      ],
+      "responsive-component": [
+        "../responsive-component/lib/index.ts"
+      ],
+      "my-utilities": [
+        "../my-utilities/lib/index.ts"
       ]
     }
   },
   "include": [
     "src",
-    "lib"
+    "lib",
+    "../responsive-component",
+    "../my-utilities"
   ]
 }
