--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,11 +23,15 @@
     "paths": {
       "@my-components/*": [
         "./src/*"
-      ]
+      ],
+      "my-utilities" : ["../my-utilities/lib/index.ts"],
+      "responsive-component" : ["../responsive-component/lib/index.ts"],
     }
   },
   "include": [
     "src",
-    "lib"
+    "lib",
+    "../my-utilities",
+    "../responsive-component"
   ]
 }
