--- a/ts/tsconfig.monorepo.json
+++ b/ts/tsconfig.monorepo.json
@@ -29,8 +29,6 @@
         }
       },
       "include": [
-        "../src",
-        "../../my-utilities",
-        "../../responsive-component"
+        "../src"
       ]
 }
