--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -p ./ts/tsconfig.prod.json && vite build",
+    "build": "tsc -p ./ts/tsconfig.build.json && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
