--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "replace-in-file": "^8.1.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
